6887186: G1: Incorrect code generated for G1 pre-barrier by C1 on SPARC

Modify operand passed to C1 pre-barrier to be the operand representing the address of the object field that is being stored.

Reviewed-by: never